--- a/src/main/java/es/upm/miw/i18n/messages.properties
+++ b/src/main/java/es/upm/miw/i18n/messages.properties
@@ -5,3 +5,5 @@ ver_votaciones=Ver votaciones
 volver_inicio=Volver al inicio
 categoria=Categoria
 pregunta=Pregunta
+requerido=Campo requerido
+inicio=Inicio
