--- a/src/main/java/es/upm/miw/i18n/messages.properties
+++ b/src/main/java/es/upm/miw/i18n/messages.properties
@@ -7,3 +7,12 @@ categoria=Categoria
 pregunta=Pregunta
 requerido=Campo requerido
 inicio=Inicio
+incorporacion_ok=Se ha registrado el tema satisfactoriamente.
+incorporacion_failure=No se ha podido registrar el tema.
+autorizar_eliminar_tema=Autorizacion
+autorizacion_ok=Se ha registrado el tema satisfactoriamente.
+autorizacion_failure=Ingrese un codigo de seguridad valido.
+ingrese_codigo=Ingrese codigo de seguridad
+enviar=Enviar
+listado_temas=Listado de temas
+guardar=Guardar
