--- a/src/main/java/es/upm/miw/i18n/messages.properties
+++ b/src/main/java/es/upm/miw/i18n/messages.properties
@@ -16,3 +16,10 @@ ingrese_codigo=Ingrese codigo de seguridad
 enviar=Enviar
 listado_temas=Listado de temas
 guardar=Guardar
+id=Id
+categoria=Categoria
+pregunta=Pregunta
+accion=Accion
+eliminar=Eliminar
+eliminacion_ok=Se ha eliminado el tema satisfactoriamente.
+eliminacion_failure=No se ha podido eliminar el tema.
