--- a/src/main/java/es/upm/miw/i18n/messages.properties
+++ b/src/main/java/es/upm/miw/i18n/messages.properties
@@ -23,3 +23,14 @@ accion=Accion
 eliminar=Eliminar
 eliminacion_ok=Se ha eliminado el tema satisfactoriamente.
 eliminacion_failure=No se ha podido eliminar el tema.
+votacion_ok=Se ha registrado el voto satisfactoriamente.
+votacion_failure=No se ha podido registrar el voto.
+home_jsf=Home Proyecto JEE_ECP Versión JSF
+realizar_votacion=Realizar votacion
+tema=Tema
+seleccion_categoria=Selecciona una categoria
+valoracion=Valoracion
+nivel_estudios=Nivel de estudios
+seleccion_nivel_estudios=Seleccione un nivel de estudios
+votacion_ok=Se ha creado el voto satisfactoriamente.
+votacion_failure=No se ha podido crear el voto.
