--- a/src/main/java/es/upm/miw/i18n/messages.properties
+++ b/src/main/java/es/upm/miw/i18n/messages.properties
@@ -34,3 +34,7 @@ nivel_estudios=Nivel de estudios
 seleccion_nivel_estudios=Seleccione un nivel de estudios
 votacion_ok=Se ha creado el voto satisfactoriamente.
 votacion_failure=No se ha podido crear el voto.
+ingrese_valoracion=Seleccione la valoracion
+ingrese_nivel_estudio=Seleccione el nivel de estudio
+valoracion_media=Valoracion media
+ver_votaciones_por_tema=Reporte de votaciones por tema
