--- a/src/main/java/es/upm/miw/i18n/messages.properties
+++ b/src/main/java/es/upm/miw/i18n/messages.properties
@@ -17,15 +17,13 @@ enviar=Enviar
 listado_temas=Listado de temas
 guardar=Guardar
 id=Id
-categoria=Categoria
-pregunta=Pregunta
 accion=Accion
 eliminar=Eliminar
 eliminacion_ok=Se ha eliminado el tema satisfactoriamente.
 eliminacion_failure=No se ha podido eliminar el tema.
 votacion_ok=Se ha registrado el voto satisfactoriamente.
 votacion_failure=No se ha podido registrar el voto.
-home_jsf=Home Proyecto JEE_ECP Versión JSF
+home_jsf=Home Proyecto JEE_ECP Version JSF
 realizar_votacion=Realizar votacion
 tema=Tema
 seleccion_categoria=Selecciona una categoria
@@ -38,3 +36,7 @@ ingrese_valoracion=Seleccione la valoracion
 ingrese_nivel_estudio=Seleccione el nivel de estudio
 valoracion_media=Valoracion media
 ver_votaciones_por_tema=Reporte de votaciones por tema
+ingles=Ingles
+espanol=Espanol
+idioma=Cambiar idioma
+votos=votos
